--- a/AppWebInternetBanking/Site.Master
+++ b/AppWebInternetBanking/Site.Master
@@ -7,14 +7,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
+    <title><%: Page.Title %></title>
+
+
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
     <webopt:BundleReference runat="server" Path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <!--  <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
+    <link rel="icon" type="image/x-icon" href="~/img/logo.ico"/>
 
 </head>
 <body style="padding:5px">
