--- a/AppWebInternetBanking/Site.Master
+++ b/AppWebInternetBanking/Site.Master
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %></title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
 
 
     <asp:PlaceHolder runat="server">
@@ -16,11 +19,72 @@
     </asp:PlaceHolder>
 
     <webopt:BundleReference runat="server" Path="~/Content/css" />
-  <!--  <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
-    <link rel="icon" type="image/x-icon" href="~/img/logo.ico"/>
+    <!--  <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
+    <link rel="icon" type="image/x-icon" href="~/img/logo.ico" />
+
+    <style>
+        .homepage_img {
+            background-image: url("https://images.unsplash.com/photo-1589561266531-d15885d830cd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1373&q=80");
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 300px;
+        }
+
+        h2 {
+            color: white;
+        }
+
+        h1 {
+            color: white;
+        }
+
+        p {
+            color: white;
+        }
+
+        .navbar {
+            background-color: #ebe8e5;
+
+        }
+
+        .navbar-inverse .navbar-nav > li > a {
+            color: black;
+            font-size: medium;
+        }
+
+        .navbar-inverse .navbar-brand {
+            color: #292929;
+            font-weight: 500;
+            font-size: 24px;
+            position: relative;
+            left: -150px;
+            padding: 5px 15px;
+        }
+
+        .navbar-nav{
+            position: relative;
+            right: -100px;
+            margin: auto 0;
+        }
+
+        .container-fluid {
+            height: 75px;
+            padding-top: 10px;
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        footer{
+            position: absolute;
+            bottom: 12px;
+            width: 50%;
+        }
+
+    </style>
 
 </head>
-<body style="padding:5px">
+<body style="padding: 5px; background-color: #292929; font-family:'Roboto', sans-serif;">
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -45,13 +109,14 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Internet Banking ULACIT</a>
+                    <a class="navbar-brand" href="../Default.aspx"><img src="/img/logo.png" width="250" height="45" alt="Logo" /></a>
+
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Menu principal</a></li>
+
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mantenimiento
-                <span class="caret"></span></a>
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/Views/frmCuenta.aspx">Cuentas</a></li>
                             <li><a href="/Views/frmServicio.aspx">Servicios</a></li>
@@ -60,42 +125,51 @@
                             <li><a href="/Views/frmDepositoPlazo.aspx">Deposito a Plazo</a></li>
                         </ul>
                     </li>
+
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Procesos
-                <span class="caret"></span></a>
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Transferencias</a></li>
                             <li><a href="#">Pagos</a></li>
                         </ul>
                     </li>
+
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Reportes
-                <span class="caret"></span></a>
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Transferencias</a></li>
                             <li><a href="#">Pagos</a></li>
                         </ul>
                     </li>
+
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Bitacoras
-                <span class="caret"></span></a>
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/Views/frmReporteError.aspx">Errores</a></li>
                             <li><a href="/Views/frmReporteSesion.aspx">Sesiones</a></li>
                             <li><a href="/Views/frmReporteEstadistica.aspx">Estadisticas</a></li>
                         </ul>
                     </li>
+
                     <li>
-                        <asp:LinkButton ID="lnkCerrarSesion" OnClick="lnkCerrarSesion_Click" runat="server">Cerrar sesion</asp:LinkButton></li>
+                        <asp:LinkButton ID="lnkCerrarSesion" OnClick="lnkCerrarSesion_Click" runat="server">Cerrar sesion <span aria-hidden='true' class='glyphicon glyphicon-log-out'></span></asp:LinkButton>
+                    </li>
                 </ul>
             </div>
+
         </nav>
+
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-            <hr />
+            
+
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <hr />
+                <p>Copyright &copy; <%: DateTime.Now.Year %> Dream Team ®</p>
             </footer>
         </div>
 
